# rust-mem

./: Cargo.toml
src/: main.rs  read_file.rs
