[package]
name = "mem"
version = "0.1.0"
authors = ["Ivan Sadykov <grandpajok@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus="1.13.0"
serde="1.0.125"
serde_json="1.0.64"

[dependencies.hook_protocol]
path = "../hook_protocol"